--- a/debian/lookalike.install.in
+++ b/debian/lookalike.install.in
@@ -1,5 +1,6 @@
 $$BINDIR/$$TARGET
 $$DATADIR/themes/base/meegotouch/$$TARGET/style
+$$DATADIR/themes/base/meegotouch/$$TARGET/icons
 $$DATADIR/applications/"$$TARGET"*.desktop
 $$DATADIR/dbus-1/services/
 $$DATADIR/icons/hicolor/64x64/apps
