Removed unneeded debian dependencies

--- a/debian/control
+++ b/debian/control
@@ -7,21 +7,10 @@ Build-Depends: libgallerycore-dev (>= 1.111026.3),
                cdbs (>= 0.4.87),
                libqt4-dev,
                libmeegotouch-dev (>= 0.20.37),
-               libquillimagefilter-dev (>= 1.111103.0),
+               libquillmetadata-dev,
                libqtsparql-dev (>= 0.0.17),
                libqtsparql-tracker-live-dev (>= 0.0.4),
-               libqmsystem2-dev,
-               doxygen,
-               maemo-meegotouch-interfaces-dev (>= 0.3.21),
-               libmcontentwidgets-dev (>= 0.12.4),
-               libqtm-contacts-dev,
-               libqtm-systeminfo-dev,
-               libcontentaction-dev,
-               libsp-timestamp-dev,
-               libmemnotifyqt1-dev,
                libfacerecognition-dev,
-               libduicontrolpanel-dev,
-               graphviz,
                aegis-builder
 Standards-Version: 3.9.1
 Homepage: https://www.igalia.com
