--- a/debian/lintian-overrides.in
+++ b/debian/lintian-overrides.in
@@ -1,5 +1,5 @@
 # We are not shipping a man page
-lookalike binary: binary-without-manpage
+$$TARGET binary: binary-without-manpage
 
 # The package contains a shared library, whose name does not match the package name
-lookalike binary: package-name-doesnt-match-sonames
+$$TARGET binary: package-name-doesnt-match-sonames
