--- a/debian/lookalike.install.in
+++ b/debian/lookalike.install.in
@@ -3,5 +3,5 @@ $$DATADIR/themes/base/meegotouch/$$TARGET/style
 $$DATADIR/themes/base/meegotouch/$$TARGET/icons
 $$DATADIR/applications/"$$TARGET"*.desktop
 $$DATADIR/dbus-1/services/
-$$DATADIR/icons/hicolor/64x64/apps
-$$DATADIR/$$TARGET
+$$DATADIR/icons/hicolor/80x80/apps
+$$PKGDATADIR
