--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,9 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/qmake.mk
 
+# Comment this to install in the default debian prefix
+DEB_QMAKE_ARGS += "PREFIX=\"\""
+
 DEB_DBG_PACKAGE_lookalike = lookalike-dbg
 
 ifneq (,$(filter debug,$(DEB_BUILD_OPTIONS)))
