--- a/desktopfiles/lookalike.desktop.in
+++ b/desktopfiles/lookalike.desktop.in
@@ -4,5 +4,5 @@ Version=1.0
 Type=Application
 Name=Look Alike
 Terminal=false
-Icon=$$DATADIR/icons/hicolor/64x64/apps/icon-l-"$$TARGET".png
-Exec=/usr/bin/invoker -s -S $$DATADIR/$$TARGET/$$TARGET-splash-portrait.png -L $$DATADIR/$$TARGET/$$TARGET-splash-landscape.png --type=$$INVOKERTYPEOPTION $$BINDIR/$$TARGET
+Icon=$$DATADIR/icons/hicolor/80x80/apps/icon-l-"$$TARGET".png
+Exec=/usr/bin/invoker -s -S $$PKGDATADIR/splash/$$TARGET-splash-portrait.png -L $$PKGDATADIR/splash/$$TARGET-splash-landscape.png --type=$$INVOKERTYPEOPTION $$BINDIR/$$TARGET
