--- a/desktopfiles/lookalike.desktop.in
+++ b/desktopfiles/lookalike.desktop.in
@@ -1,8 +1,9 @@
 [Desktop Entry]
 Encoding=UTF-8
-Version=1.0
 Type=Application
 Name=Look Alike
+GenericName=Look Alike
+Comment=Harmattan Lookalike application
 Terminal=false
 Icon=$$DATADIR/icons/hicolor/80x80/apps/icon-l-"$$TARGET".png
 Exec=/usr/bin/invoker -s -S $$PKGDATADIR/splash/$$TARGET-splash-portrait.png -L $$PKGDATADIR/splash/$$TARGET-splash-landscape.png --type=$$INVOKERTYPEOPTION $$BINDIR/$$TARGET
